# flow_table

./: .gitignore  CMakeLists.txt  Resolve_s2c.cpp  config.ini
docs/: fetch_resp.md  funcs.md  imap.md  pic.md  proj_descri.md  struct.h  types.md  workflow.md
extension/AC/: AhoCorasick.cpp  base64.cpp  input.txt  test  test.cpp
extension/auto_AC/: CMakeLists.txt
extension/auto_AC/file/: c2s数据.txt  input.txt  input1.txt  s2c数据.txt  sensitive.txt
extension/auto_AC/include/: AhoCorasick.h  base64.h
extension/auto_AC/src/: AhoCorasick.cpp  base64.cpp  main.cpp
include/config/: config_parser.h
include/flows/: flow_manager.h
include/plugin/: plugin.h
include/tools/: CircularString.h  s2ctools.h  types.h
src/flows/: flow_manager.cpp  s2c_parser.cpp
src/plugin/: plugin.cpp
src/tools/: CircularString.cpp  s2ctools.cpp
test/: main_of_0x12.cpp  parsed_email_content.txt  test_c2s_parser.cpp  test_circular_string.cpp  test_email_keyword_detection.cpp  test_imap_parsing.cpp  test_imap_performance.cpp  test_parse_c2s_data.cpp  test_plugin.cpp  test_s2c_parser.cpp
